devices/vector/gdevpx.c
@@ -363,7 +363,10 @@ pclxl_can_handle_color_space(const gs_color_space * pcs)
     return !(index == gs_color_space_index_Separation ||
              index == gs_color_space_index_Pattern ||
              index == gs_color_space_index_DeviceN ||
-             index == gs_color_space_index_ICC);
+             index == gs_color_space_index_ICC ||
+             index <= gs_color_space_index_CIEA &&
+             index >= gs_color_space_index_CIEDEFG
+             );
 }
 
 /* Test whether we can icclink-transform an image. */
